--- a/index.html
+++ b/index.html
@@ -6,29 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="/style/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style/remodal.css">
+    <link rel="stylesheet" href="./style/remodal-default-theme.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
 
-    <div class="main">
-        <label for="name" class="form__lable">Search a movie</label>
-        <input type="text" name="name" id="name" class="form__input">
+    <button id="fav-call">Show favourite</button>
+    <div class="page">
+        <div class="menu">
+            <label class="form__label" for="name"><a href="#">Search a movie or series</a></label>
+            <input class="form__input" type="text" name="name" id="name" placeholder="Star Wars">
 
-        <select name="type" id="select" class="form__select">
-            <option value="movie" class="form__select-option">Movie</option>
-            <option value="series" class="form__select-option">Series</option>
-            <option value="episode" class="form__select-option">Episode</option>
-        </select>
+            <select id="select" class="form__select" name="type">
+                <option class="form__select-option" value="movie">movie</option>
+                <option class="form__select-option" value="series">series</option>
+            </select>
+            <input id="submit" class="form__submit" type="submit" value="SEARCH">
 
-        <input type="submit" class="form__submit" id="submit">
+        </div>
+
+        <div id="nav"></div>
+        <div id="panel"></div>
+        <div id="fav-list">
+        </div>
+        <div class="remodal-bg">
+            <div class="remodal" data-remodal-id="modal">
+                <button data-remodal-action="close" class="remodal-close"></button>
+                <img id="image" alt="movie poster">
+                <h1 id="heading"></h1>
+                <h2 id="year"></h2>
+                <p id="plot-para">
+                </p>
+                <br>
+            </div>
+        </div>
+
+        <div class="remodal-bg">
+            <div class="remodal" data-remodal-id="modal-error">
+                <p class="error-message">ERROR! MOVIE NOT FOUND</p>
+                <button data-remodal-action="confirm" class="remodal-confirm">OK</button>
+            </div>
+        </div>
+
     </div>
-
-    <div id="root"></div>
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.js"></script>
-    <script src="/JS/JavaScript.js"></script>
+    <script src="./script/remodal.min.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 
 </html>
